--- a/src/components/common/dropdown/dropdown.scss
+++ b/src/components/common/dropdown/dropdown.scss
@@ -1,4 +1,3 @@
-@import "../common/save-controls/save-controls.scss";
 
 .dropdown-container {
   position: relative;
@@ -39,7 +38,7 @@
     width: 280px;
   }
 
-  &__select {
+  &__text {
     font-size: 14px;
     color: $dark75;
   }
@@ -73,44 +72,4 @@
     font-weight: bold;
     text-transform: uppercase;
   }
-
-  &__controls {
-    padding-top: 12px;
-  }
 }
-
-.option {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  font-size: 12px;
-  line-height: 15px;
-  margin-bottom: 7px;
-
-  &__name {
-    color: $dark100;
-  }
-
-  &__controls {
-    width: 92px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-}
-
-.increment {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: white;
-  border: 1px solid $dark50;
-  color: $dark50;
-
-  &--disabled {
-    border-color: $dark25;
-    color: $dark25;
-  }
-}
-
