options: add detailed option to show each option with value in dropdown text

--- a/src/components/common/dropdown/dropdown.pug
+++ b/src/components/common/dropdown/dropdown.pug
@@ -1,4 +1,4 @@
-mixin dropdown(props, content)
+mixin dropdown(props)
   .input
     label.input__label(for=props.id)
       span.input__title= props.title
