--- a/src/components/options/options.scss
+++ b/src/components/options/options.scss
@@ -1,7 +1,7 @@
 @import "../common/save-controls/save-controls.scss";
 @import "../common/dropdown/dropdown.scss";
 
-.dropdown__controls {
+.options__controls {
     padding-top: 12px;
 }
 
