--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -12,6 +12,8 @@ p
       id: "options-0",
       plural: "гость,гостя,гостей",
       dataKey: "dropdown-0",
+      detailed: false,
+      useControls: true,
       options: [
         {name: "взрослые", value: 0}, 
         {name: "дети", value: 0}, 
@@ -30,7 +32,8 @@ p
     +options({
       plural: "опций,опции,опций",
       dataKey: "dropdown-2",
-      detailed: "true",
+      detailed: true,
+      useControls: false,
 
       options: [
         {name: "спальни", value: 0, plural: "спальня,спальни,спален"}, 
