--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -8,8 +8,8 @@
   padding: 19px 20px 12px;
   box-sizing: border-box;
 
-  border: 1px solid $dark25;
-  border-radius: 4px;
+  // border: 1px solid $dark25;
+  // border-radius: 4px;
 
   &__header {
     display: flex;
