--- a/src/index.pug
+++ b/src/index.pug
@@ -2,6 +2,7 @@ extends layout.pug
 //- Include mixins here
 include components/input/input.pug
 include components/common/dropdown/dropdown.pug
+include components/common/dropdown-content/dropdown-content.pug
 include components/options/options.pug
 include components/masked-input/masked-input.pug
 include components/date-picker/date-picker.pug
