--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -26,6 +26,7 @@ mixin date-dropdown(props)
       })
     +dropdown-content({
       id: contentId,
-      dataKey: dataKey
+      dataKey: dataKey,
+      modifier: "separate"
     })
       +date-picker({id: pickerId})
