Refactor component structure, add options-dropdown component

--- a/src/components/common/options/options.pug
+++ b/src/components/common/options/options.pug
@@ -1,6 +1,4 @@
-//- extends ../common/dropdown/dropdown.pug
-//- include ../common/dropdown/dropdown.pug
-include ../common/save-controls/save-controls.pug
+include /components/common/save-controls/save-controls.pug
 
 mixin option(props)
   .option
