--- a/src/components/common/options/options.scss
+++ b/src/components/common/options/options.scss
@@ -1,5 +1,4 @@
-@import "../common/save-controls/save-controls.scss";
-@import "../common/dropdown/dropdown.scss";
+@import "@/components/common/save-controls/save-controls.scss";
 
 .options__controls {
   padding-top: 12px;
