--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -1,4 +1,6 @@
-include ../date-picker/date-picker.pug
+include /components/common/dropdown/dropdown.pug
+include /components/common/dropdown-content/dropdown-content.pug
+include /components/date-picker/date-picker.pug
 
 mixin date-dropdown(props)
   -
