--- a/src/components/common/save-controls/save-controls.pug
+++ b/src/components/common/save-controls/save-controls.pug
@@ -1,4 +1,4 @@
-mixin save-controls(props)
-  .save-controls(class=`${props.classNames.container}`)
-    button.save-controls__clear.invisible(class=`${props.classNames.clear}`) Очистить
-    button.save-controls__apply(class=`${props.classNames.apply}`) Применить
+mixin save-controls({ classNames })
+  .save-controls(class=`${classNames.container}`)
+    button.save-controls__clear.invisible(class=`${classNames.clear}`) Очистить
+    button.save-controls__apply(class=`${classNames.apply}`) Применить
