--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -3,3 +3,4 @@
 @import "@/components/masked-input/masked-input.scss";
 @import "@/components/date-picker/date-picker.scss";
 @import "@/components/date-dropdown/date-dropdown.scss";
+@import "@/components/filter-date-dropdown/filter-date-dropdown.scss";
