Transition to Material UI icons

--- a/src/components/common/dropdown/dropdown.pug
+++ b/src/components/common/dropdown/dropdown.pug
@@ -7,4 +7,5 @@ mixin dropdown({ id, title, description, dataKey, contentId, text })
     button.dropdown(id=id, data-datakey=dataKey, data-contentid=contentId)
       span.dropdown__text= text
       i.dropdown__icon-expand
+        span.material-icons expand_more
       
