--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,9 @@
 @import "@styles/layout.scss";
 @import "pages/ui-kit/ui-kit.scss";
 
+$material-icons-font-path: '~material-icons/iconfont/';
+@import '~material-icons/iconfont/material-icons.scss';
+
 html {
   font-family: Montserrat, sans-serif;
   font-weight: normal;
