Correct SCSS variable names

--- a/src/components/common/save-controls/save-controls.scss
+++ b/src/components/common/save-controls/save-controls.scss
@@ -12,7 +12,7 @@
     border: none;
     background-color: white;
     padding: 0;
-    color: $purple;
+    color: $primary;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 12px;
