--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -3,5 +3,5 @@ $dark75: rgba(31, 32, 65, 0.75);
 $dark50: rgba(31, 32, 65, 0.5);
 $dark25: rgba(31, 32, 65, 0.25);
 $dark05: rgba(31, 32, 65, 0.05);
-$purple: #bc9cff;
-$green: #6fcf97;
+$primary: #bc9cff;
+$secondary: #6fcf97;
