--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -27,7 +27,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: $purple;
+    color: $primary;
   }
 
   &__heading {
@@ -143,7 +143,7 @@
       justify-content: center;
       padding: 0;
       font-weight: bold;
-      color: $purple;
+      color: $primary;
       cursor: default;
     }
   }
