--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import "@styles/fonts.scss";
 @import "@styles/colors.scss";
 @import "@styles/layout.scss";
+@import "components/common/common.scss";
 @import "pages/ui-kit/ui-kit.scss";
 
 $material-icons-font-path: '~material-icons/iconfont/';
