--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -3,6 +3,10 @@
   justify-content: space-between;
 
   &__half {
-    width: 150px;
+    max-width: 150px;
+
+    @media screen and (max-width: 350px) {
+      max-width: 135px;
+    }
   }
 }
