--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -4,12 +4,9 @@
   justify-content: center;
   align-items: center;
 
-  width: 320px;
+  max-width: 320px;
   padding: 19px 20px 12px;
   box-sizing: border-box;
-
-  // border: 1px solid $dark25;
-  // border-radius: 4px;
 
   &__header {
     display: flex;
