CSS cleanup & refactor

--- a/src/components/date-picker/date-picker.pug
+++ b/src/components/date-picker/date-picker.pug
@@ -8,7 +8,7 @@ mixin date-picker({ id, dataKey })
     header.date-picker__header
       i.date-picker__previous
         span.material-icons arrow_back
-      span.date-picker__heading Август 2019
+      h2.date-picker__heading Август 2019
       i.date-picker__next
         span.material-icons arrow_forward
 
