--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -64,3 +64,5 @@ p
 p
   +masked-input({ type: "text", id: "masked", placeholder: "ДД.ММ.ГГГГ", title: "Masked text field" })
 
+p
+  h3 checkbox buttons
