--- a/src/index.scss
+++ b/src/index.scss
@@ -8,25 +8,17 @@ $material-icons-font-path: '~material-icons/iconfont/';
 @import '~material-icons/iconfont/material-icons.scss';
 
 html {
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat;
+  font-style: normal;
   font-weight: normal;
-}
-
-h1 {
-  font-family: Quicksand, sans-serif;
-  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px
 }
 
 body {
   text-align: left;
   padding: 1rem;
   margin: 0 auto;
-
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 24px;
 
   color: $dark75;
 }
@@ -55,14 +47,15 @@ h2 {
 h3 {
   @extend .heading;
   font-family: Montserrat;
-  font-weight: normal;
   font-size: 12px;
   line-height: 15px;
   text-transform: uppercase;
 }
 
-button {
+button, input {
   font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
 }
 
 .hidden {
