--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,8 +1,10 @@
 .input {
+  position: relative;
   max-width: 320px;
 
   &__field {
-    width: 320px;
+    max-width: 320px;
+    width: 100%;
     height: 44px;
     line-height: 18px;
     background: #ffffff;
@@ -12,7 +14,7 @@
     padding-left: 15px;
 
     @media screen and (max-width: 350px) {
-      width: 280px;
+      max-width: 280px;
     }
 
     &::placeholder {
@@ -22,5 +24,29 @@
     &:hover, &:focus {
       border-color: $dark50;
     }
+
+    &--with-submit {
+      padding-right: 50px;
+    }
+  }
+
+  &__submit {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    height: 44px;
+    width: 44px;
+    border: none;
+    background: none;
+
+    cursor: pointer;
+    color: $primary;
+
+    padding: 0;
   }
 }
