--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -65,4 +65,8 @@ p
   +masked-input({ type: "text", id: "masked", placeholder: "ДД.ММ.ГГГГ", title: "Masked text field" })
 
 p
+  +input({ type: "email", id: "sub-email", placeholder: "Email", title: "Subscription text field", submit: true })
+
+
+//- p
   h3 checkbox buttons
