Add checkbox component

--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -4,3 +4,4 @@
 @import "@/components/date-picker/date-picker.scss";
 @import "@/components/date-dropdown/date-dropdown.scss";
 @import "@/components/filter-date-dropdown/filter-date-dropdown.scss";
+@import "@/components/checkbox/checkbox.scss";
