--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -4,6 +4,7 @@ include /components/masked-input/masked-input.pug
 include /components/date-picker/date-picker.pug
 include /components/date-dropdown/date-dropdown.pug
 include /components/filter-date-dropdown/filter-date-dropdown.pug
+include /components/checkbox/checkbox.pug
 
 p
   +input({ type: "email", id: "email", placeholder: "Email", title: "Text field" })
@@ -59,8 +60,6 @@ p
     text: "Выберите даты"
   })
 
-//- +input({type: "email", id: "email", placeholder: "Email", title: "Text field", description: "default"})
-
 p
   +masked-input({ type: "text", id: "masked", placeholder: "ДД.ММ.ГГГГ", title: "Masked text field" })
 
@@ -68,5 +67,6 @@ p
   +input({ type: "email", id: "sub-email", placeholder: "Email", title: "Subscription text field", submit: true })
 
 
-//- p
+p
   h3 checkbox buttons
+  +checkbox({ id: "checkbox-0", text: "Можно с питомцами" })
