--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -4,4 +4,6 @@ $dark50: rgba(31, 32, 65, 0.5);
 $dark25: rgba(31, 32, 65, 0.25);
 $dark05: rgba(31, 32, 65, 0.05);
 $primary: #bc9cff;
+$primary-gradient: #8BA4F9;
 $secondary: #6fcf97;
+$secondary-gradient: #66D2EA;
