--- a/src/assets/styles/form-inputs.scss
+++ b/src/assets/styles/form-inputs.scss
@@ -1,8 +1,10 @@
-@supports (-webkit-appearance: none) or (-moz-appearance: none) {
+/**
+ * https://css-tricks.com/custom-styling-form-inputs-with-modern-css-features/
+ * https://codepen.io/aaroniker/pen/ZEYoxEY?editors=0110
+ */
+@supports (appearance: none) {
   input[type="checkbox"] {
     appearance: none;
-    // -webkit-appearance: none;
-    // -moz-appearance: none;
     position: relative;
     border: 1px solid $dark25;
     border-radius: 4px;
@@ -11,24 +13,34 @@
     height: 20px;
     vertical-align: middle;
     margin: 0;
-    // outline: 1px solid red;
+    padding: 0;
     display: inline-flex;
     justify-content: center;
     align-items: center;
+
+    &:checked {
+      border-color: $primary;
+
+      &::after {
+        content: "";
+        display: table;
+        position: absolute;
+        top: 5px;
+        left: 6px;
+        border-style: solid;
+        border-width: 2px 2px 0 0;
+        border-image: linear-gradient(90deg, $primary, $primary-gradient) 1;
+        box-sizing: border-box;
+        width: 8px;
+        height: 6px;
+        transform: rotate(135deg);
+      }
+    }
   }
 
-  input[type="checkbox"]:checked::after {
-    content: '';
-    display: table;
-    position: absolute;
-    // border-color: linear-gradient(180deg, $primary, #8BA4F9);
-    border-color: $primary;
-    border-style: solid;
-    border-width: 0 0 2px 2px;
-    box-sizing: border-box;
-    width: 8px;
-    height: 6px;
-    transform: rotate(-45deg);
-    // outline: 1px solid green;
+  input[type="radio"] {
+    &:checked {
+
+    }
   }
 }
