--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -69,4 +69,9 @@ p
 
 p
   h3 checkbox buttons
-  +checkbox({ id: "checkbox-0", text: "Можно с питомцами" })
+  +checkbox({ id: "checkbox-0", text: "Можно курить", checked: false })
+  +checkbox({ id: "checkbox-1", text: "Можно с питомцами", checked: true })
+  +checkbox({ id: "checkbox-2", text: "Можно пригласить гостей (до 10 человек)", checked: true })
+
+p
+  h3 radio buttons
