--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -5,3 +5,4 @@
 @import "@/components/date-dropdown/date-dropdown.scss";
 @import "@/components/filter-date-dropdown/filter-date-dropdown.scss";
 @import "@/components/checkbox/checkbox.scss";
+@import "@/components/radio/radio.scss";
