--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -1,3 +1,35 @@
 .checkbox {
   padding: 5px 0;
 }
+
+input[type="checkbox"].checkbox__input {
+  &--toggle {
+
+    &::after {
+      content: "";
+      display: table;
+      position: absolute;
+      top: 3px;
+      left: 4px;
+      width: 12px;
+      height: 12px;
+      border: none;
+      border-radius: 50%;
+      background-color: $dark25;
+    }
+
+    &:checked {
+      &::after {
+        left: 24px;
+        background-image: linear-gradient(180deg, $primary, $primary-gradient);
+      }
+    }
+    
+    width: 40px;
+    border-radius: 10px;
+
+    & + label {
+      color: $dark75;
+    }
+  }
+}
