--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -78,3 +78,8 @@ p
   h3(style="padding: 10px 0") radio buttons
   +radio({ id: "radio-0", name: "sex", value: "male", text: "Мужчина", checked: true })
   +radio({ id: "radio-1", name: "sex", value: "female", text: "Женщина" })
+
+p
+  h3(style="padding: 10px 0") toggle
+  +checkbox({ id: "checkbox-3", text: "Получать спецпредложения", checked: true, toggle: true })
+  +checkbox({ id: "checkbox-4", text: "Получать спецпредложения", checked: false, toggle: true })
