Add like-button component

--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -6,3 +6,4 @@
 @import "@/components/filter-date-dropdown/filter-date-dropdown.scss";
 @import "@/components/checkbox/checkbox.scss";
 @import "@/components/radio/radio.scss";
+@import "@/components/like-button/like-button.scss";
