Add component rate-button

--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -7,3 +7,4 @@
 @import "@/components/checkbox/checkbox.scss";
 @import "@/components/radio/radio.scss";
 @import "@/components/like-button/like-button.scss";
+@import "@/components/rate-button/rate-button.scss";
