--- a/src/components/rate-button/rate-button.scss
+++ b/src/components/rate-button/rate-button.scss
@@ -11,8 +11,17 @@
     & .material-icons {
       font-size: 24px;
       line-height: 20px;
-      color: $primary;
-      // color: linear-gradient(180deg, $primary, $primary-gradient);
+
+      color: $primary; // fallback
+
+      @supports (-webkit-text-fill-color: transparent) and
+        ((background-clip: text) or (-webkit-background-clip: text)) {
+        background: linear-gradient($primary, $primary-gradient);
+        background: -webkit-linear-gradient($primary, $primary-gradient);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
     }
   }
 }
