--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -8,3 +8,4 @@
 @import "@/components/radio/radio.scss";
 @import "@/components/like-button/like-button.scss";
 @import "@/components/rate-button/rate-button.scss";
+@import "@/components/range-slider/range-slider.scss";
