--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -9,3 +9,4 @@
 @import "@/components/like-button/like-button.scss";
 @import "@/components/rate-button/rate-button.scss";
 @import "@/components/range-slider/range-slider.scss";
+@import "@/components/button/button.scss";
